Added ReadMe file

--- a/index.html
+++ b/index.html
@@ -37,9 +37,39 @@
   </section>
 
   <section class="course">
-
-
     
+    <h1>Courses We Offer</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    
+    <div class="row">
+      <div class="courseOption">
+        <h3>Intermediate</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Porro hic tenetur minus quos sapiente, sunt maxime deleniti
+          itaque cum pariatur rerum ipsum fuga alias vero? Fugiat quibusdam
+          commodi quasi maiores.</p>
+      </div>
+      <div class="courseOption">
+        <h3>Dgree</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Porro hic tenetur minus quos sapiente, sunt maxime deleniti
+          itaque cum pariatur rerum ipsum fuga alias vero? Fugiat quibusdam
+          commodi quasi maiores.</p>
+      </div>
+      <div class="courseOption">
+        <h3>Post Graduation</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Porro hic tenetur minus quos sapiente, sunt maxime deleniti
+          itaque cum pariatur rerum ipsum fuga alias vero? Fugiat quibusdam
+          commodi quasi maiores.</p>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="campus">
+    <h1>Our Global Campus</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
   </section>
  
  
