added Facilites & campus sections with styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,59 @@
   <section class="campus">
     <h1>Our Global Campus</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+    <div class="row">
+      <div class="campusOption">
+        <img src="images/london.png">
+        <div class="layer">
+          <h3>LONDON</h3>
+        </div>
+      </div>
+
+      <div class="campusOption">
+        <img src="images/newyork.png">
+        <div class="layer">
+          <h3>NEW YORK</h3>
+        </div>
+      </div>
+
+      <div class="campusOption">
+        <img src="images/washington.png">
+        <div class="layer">
+          <h3>WASHINTON</h3>
+        </div>
+      </div>
+    </div>
   </section>
+
+  <section class="facilities">
+    <h1>Our Facilities</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+    <div class="row">
+      <div class="facilitiesOption">
+        <img src="images/library.png">
+        <h3>World Class Library</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Eius sint libero a possimus autem accusamus odit!</p>
+      </div>
+
+      <div class="facilitiesOption">
+        <img src="images/basketball.png">
+        <h3>World Class Library</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Eius sint libero a possimus autem accusamus odit!</p>
+      </div>
+
+      <div class="facilitiesOption">
+        <img src="images/cafeteria.png">
+        <h3>World Class Library</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Eius sint libero a possimus autem accusamus odit!</p>
+      </div>
+    </div>
+  </section>
+  
  
  
   <!-- --------------JavaScipt------------ -->
